fix low contrast ratio on button

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -27,7 +27,7 @@ h2 {
 }
 
 .button.warning {
-  @apply bg-red-500 text-gray-50;
+  @apply bg-red-600 text-gray-50;
 }
 
 .button.warning.ghost {
